<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:background="@drawable/sign_in"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:contentDescription="@string/img_logo"
            android:id="@+id/img_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/logotext" />

        <TextView
            android:textAlignment="center"
            android:layout_below="@+id/img_logo"
            android:id="@+id/tvSilahkan"
            android:layout_marginBottom="50dp"
            android:text="@string/silahkan_login_untuk_memakai_aplikasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:inputType="text"
            android:autofillHints="username"
            android:id="@+id/etUsername"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvSilahkan"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/fab_margin"
            android:drawableStart="@drawable/ic_username"
            android:hint="@string/hint_username" />

        <EditText
            android:autofillHints="password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/hint_password"
            android:id="@+id/etPassword"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/etUsername"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>

        <android.widget.Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/etPassword"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_sign_in" />

        <TextView
            android:id="@+id/tvCreateAccount"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_below="@+id/btnLogin"
            android:text="@string/create_a_new_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</LinearLayout>